# bh_bioasq_system

./: .gitignore  README.md  bh_bioasq.py  main.py  pyproject.toml
experiments/results/: baseline_50.json  baseline_v2_50.json  baseline_v3_50.json  bielik11_baseline_50.json  bielik15_baseline_50.json  phi3_baseline_50.json
src/agents/: pipeline.py  router.py
src/data/: dataset.py
src/evaluation/: evaluator.py
src/generation/: base_client.py  gemini_client.py  llm_client.py  openai_client.py  prompt_builder.py
src/retrieval/: retriever.py
