[project]
name = "bh-bioasq-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "datasets>=4.8.5",
    "faiss-cpu>=1.13.2",
    "jupyter>=1.1.1",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "notebook>=7.5.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.0",
    "rich>=15.0.0",
    "sentence-transformers>=5.5.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
]

[tool.uv]
index-strategy = "unsafe-best-match"
index = [
    { url = "https://download.pytorch.org/whl/cu121", name = "pytorch" },
    { url = "https://pypi.org/simple", name = "pypi", default = true },
]
